# models-aas

./: .gitignore  LICENSE  README.md
deployment/3scale/: apimanager.yaml  custom_policy_definition.yaml  llm-metrics-policy.yaml
deployment/3scale/api_definitions/: docling.json  granite-3-8b-instruct.json  granite-8b-code-instruct.json  mistral-7b-instruct-v0.3.json  nomic-embed-text-v1.5.json
deployment/3scale/llm_metrics_policy/: README.md  apicast-policy.json  custom_metrics.lua  init.lua  llm.lua  portal_client.lua  response.lua
deployment/3scale/portal/: Documentation.html.liquid  Examples.html.liquid  Homepage.html.liquid  _submenu.html.liquid  configuration.html.liquid  docs.html.liquid  examples.html.liquid  index.html.liquid  l_main_layout.html.liquid
deployment/3scale/portal/Applications/: ChooseService.html.liquid  Index.html.liquid  Show.html.liquid
deployment/3scale/portal/Layout/: Main_Layout.html.liquid
deployment/3scale/portal/Login/: New.html.liquid
deployment/3scale/portal/Partials/: submenu.html.liquid
deployment/3scale/portal/css/: default.css  (+1 more)
deployment/3scale/remove_bearer_policy/: apicast-policy.json  init.lua  remove-bearer.lua
deployment/model_serving/: granite-code-vllm-raw.yaml  mistral-vllm-raw.yaml  nomic-embed-raw.yaml  obc-rgw.yaml
deployment/rh-sso/: keycloak.yaml  keycloakrealm-maas.yaml
tests/: granite-endpoint.ipynb  mistral-endpoint.ipynb  nomic-endpoint.ipynb
tools/: README.md  activate_all_services.py  activate_service.ipynb  activate_service_all_accounts.ipynb  activate_service_functions.py  pyproject.toml
(+5 files in other folders)
