[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Guillaume Moutier <guillaume.moutier@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
xmltodict = "^0.14.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
